--- a/src/main/webapp/templates/layout/main-layout.xhtml
+++ b/src/main/webapp/templates/layout/main-layout.xhtml
@@ -17,12 +17,13 @@
     <link rel="stylesheet" type="text/css" href="#{request.contextPath}/webjars/bootstrap/3.3.6/css/bootstrap.min-jsf.css"/>
 
     <!-- Font Awesome -->
-    <h:outputStylesheet library="webjars" name="font-awesome/4.6.3/css/font-awesome.min-jsf.css"/>
+    <h:outputStylesheet library="webjars" name="font-awesome/4.7.0/css/font-awesome.min-jsf.css"/>
     <!-- Ionicons -->
     <h:outputStylesheet library="webjars" name="ionicons/2.0.1/css/ionicons.min.css"/>
 
     <h:outputStylesheet library="webjars" name="bootstrap-datepicker/1.6.1/css/bootstrap-datepicker.min.css"/>
     <h:outputStylesheet library="webjars" name="bootstrap-select/1.10.0/dist/css/bootstrap-select.min.css"/>
+    <h:outputStylesheet library="webjars" name="timepicker/1.11.5/jquery.timepicker.min.css"/>
     <!-- Theme style -->
     <link rel="stylesheet" type="text/css" href="#{request.contextPath}/resources/css/AdminLTE.css"/>
     <link rel="stylesheet" type="text/css" href="#{request.contextPath}/resources/css/screen.css"/>
@@ -31,6 +32,7 @@
     <!-- <link rel="stylesheet" href="../../dist/css/skins/_all-skins.min.css"> -->
     <link rel="stylesheet" type="text/css" href="#{request.contextPath}/resources/css/skins/skin-red.css"/>
     <link rel="stylesheet" type="text/css" href="#{request.contextPath}/resources/css/bootstrap-duallistbox.css"/>
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -82,6 +84,7 @@
 <!--Bootstrap Datepicker-->
 <h:outputScript library="webjars" name="bootstrap-datepicker/1.6.1/js/bootstrap-datepicker.min.js"/>
 <h:outputScript library="webjars" name="bootstrap-datepicker/1.6.1/locales/bootstrap-datepicker.es.min.js"/>
+<h:outputScript library="webjars" name="timepicker/1.11.5/jquery.timepicker.min.js"/>
 
 <h:outputScript library="plugins" name="number/jquery.number.js" target="head"/>
 <h:outputScript library="plugins" name="number/numericInput.js" target="head"/>
